<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral90">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/background_logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_image"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:paddingVertical="24dp">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registration_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="55dp"
                android:text="@string/fio_text"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAllCaps="false"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="14dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_login"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textAllCaps="false"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="14dp"
                android:text="@string/password_text"
                android:textColor="@color/black"
                android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="300dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:password="true"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    tools:ignore="Deprecated" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="14dp"
                android:text="@string/confirm_password_text"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_confirm_password"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:password="true"
                android:textAllCaps="false"
                android:textColor="@color/black"
                tools:ignore="Deprecated" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/SignUpBtn"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center"
                    android:text="@string/register_text"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/SignInBtn"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:text="@string/login_text"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:background="@android:color/transparent"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
