<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@color/material_dynamic_neutral90">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/background_logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="48dp"
            android:layout_below="@+id/main_image"
            android:orientation="vertical">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/authorization_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:layout_marginStart="55dp"
                android:layout_marginBottom="5dp"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_login"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:layout_marginStart="55dp"
                android:layout_marginBottom="5dp"
                />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="300dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:password="true"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAllCaps="false"
                    tools:ignore="Deprecated" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="24dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/SignInBtn"
                        android:layout_width="300dp"
                        android:textAllCaps="false"
                        android:layout_height="55dp"
                        android:text="@string/login_text"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:cornerRadius="8dp"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/SignUpBtn"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/no_account_text"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp"
                    app:cornerRadius="8dp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
