<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/profile_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/profile_text"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logout"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@+id/profile_tv"
        app:layout_constraintBottom_toBottomOf="@+id/profile_tv"
        app:layout_constraintStart_toEndOf="@+id/profile_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/fio_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fio_text"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/profile_tv"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/fio_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/hint_color"
        android:background="@drawable/background_input"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@+id/fio_tv"
        app:layout_constraintTop_toBottomOf="@+id/fio_tv"/>

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/fio_input"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/hint_color"
        android:background="@drawable/background_input"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@+id/fio_tv"
        app:layout_constraintTop_toBottomOf="@+id/login_tv"/>


    <TextView
        android:id="@+id/password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/login_input"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/hint_color"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_input"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@+id/fio_tv"
        app:layout_constraintTop_toBottomOf="@+id/password_tv"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_my_tasks_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_my_tasks_text"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_menu"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/menu_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:itemTextAppearance="@style/NavigationTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:itemTextColor="@color/menu_color_selector"
        app:itemIconTint="@color/menu_color_selector"
        app:itemRippleColor="@color/dark_blue"
        app:menu="@menu/bottom_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>